鏇存柊 README 鍜?.gitignore锛氭坊鍔?License 淇℃伅銆佸垱寤虹畝浣撲腑鏂囩増 README銆佸厑璁歌拷韪?config.json 鍜?default.json

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,9 @@ ENV/
 .DS_Store
 
 # Project specific
-config.json
-configs/
+# config.json - now tracked in repository
+configs/*
+!configs/default.json
 *.log
 *.tmp
 *.bak
