Add test branch with latest changes and new features

--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
     "selected_2_tb": 2,
     "in_game_sens": 0.235,
     "mouse_dpi": 800,
-    "mode": "Normal",
+    "mode": "WindMouse",
+    "mode_sec": "Normal",
     "fovsize": 100,
     "tbfovsize": 5,
     "tbdelay_min": 0.08,
@@ -29,8 +30,8 @@
     "rcs_pull_speed": 10,
     "rcs_activation_delay": 100,
     "rcs_rapid_click_threshold": 200,
-    "normal_x_speed": 3,
-    "normal_y_speed": 3,
+    "normal_x_speed": 500,
+    "normal_y_speed": 460,
     "normalsmooth": 30,
     "normalsmoothfov": 30,
     "enableaim_sec": false,
@@ -43,6 +44,38 @@
     "aim_offsetX_sec": 0,
     "aim_offsetY_sec": 0,
     "aim_type_sec": "head",
+    "ncaf_near_radius": 100.0,
+    "ncaf_snap_radius": 20.0,
+    "ncaf_alpha": 1.5,
+    "ncaf_snap_boost": 0.3,
+    "ncaf_max_step": 50.0,
+    "ncaf_near_radius_sec": 100.0,
+    "ncaf_snap_radius_sec": 20.0,
+    "ncaf_alpha_sec": 1.5,
+    "ncaf_snap_boost_sec": 0.3,
+    "ncaf_max_step_sec": 50.0,
+    "wm_gravity": 9.0,
+    "wm_wind": 3.0,
+    "wm_max_step": 15.0,
+    "wm_min_step": 2.0,
+    "wm_min_delay": 0.001,
+    "wm_max_delay": 0.003,
+    "wm_gravity_sec": 9.0,
+    "wm_wind_sec": 3.0,
+    "wm_max_step_sec": 15.0,
+    "wm_min_step_sec": 2.0,
+    "wm_min_delay_sec": 0.001,
+    "wm_max_delay_sec": 0.003,
+    "bezier_segments": 2,
+    "bezier_ctrl_x": 5.0,
+    "bezier_ctrl_y": 3.0,
+    "bezier_speed": 6.832,
+    "bezier_delay": 0.044012,
+    "bezier_segments_sec": 8,
+    "bezier_ctrl_x_sec": 16.0,
+    "bezier_ctrl_y_sec": 16.0,
+    "bezier_speed_sec": 1.0,
+    "bezier_delay_sec": 0.002,
     "anti_smoke_enabled": false,
     "anti_smoke_enabled_sec": false,
     "show_opencv_windows": true,
@@ -58,8 +91,11 @@
     "show_distance_text": true,
     "udp_ip": "127.0.0.1",
     "udp_port": "1234",
-    "capture_mode": "UDP",
+    "capture_mode": "MSS",
     "last_ndi_source": null,
+    "mss_monitor_index": 1,
+    "mss_fov_x": 320,
+    "mss_fov_y": 325,
     "capture_device_index": 0,
     "capture_width": 1920,
     "capture_height": 1080,
