Improve RCS and Silent Aim: add Y-axis release feature, better activation logic, and enhanced integration

--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     "selected_2_tb": 2,
     "in_game_sens": 0.235,
     "mouse_dpi": 800,
-    "mode": "WindMouse",
+    "mode": "Silent",
     "mode_sec": "Normal",
     "fovsize": 61,
     "tbfovsize": 5,
@@ -94,9 +94,9 @@
     "bezier_ctrl_y_sec": 16.0,
     "bezier_speed_sec": 1.0,
     "bezier_delay_sec": 0.002,
-    "silent_distance": 1.0,
-    "silent_delay": 0.1,
-    "silent_move_delay": 0.5,
+    "silent_distance": 3.9609999999999994,
+    "silent_delay": 0.01,
+    "silent_move_delay": 0.15097000000000005,
     "silent_return_delay": 0.5,
     "anti_smoke_enabled": false,
     "anti_smoke_enabled_sec": false,
