Update codebase: improvements to UI, normal mode, mouse utilities and configuration

--- a/config.json
+++ b/config.json
@@ -34,11 +34,11 @@
     "tbburst_count_max": 1,
     "tbburst_interval_min": 0.0,
     "tbburst_interval_max": 0.0,
-    "enablercs": false,
+    "enablercs": true,
     "rcs_pull_speed": 10,
     "rcs_activation_delay": 100,
     "rcs_rapid_click_threshold": 200,
-    "rcs_release_y_enabled": false,
+    "rcs_release_y_enabled": true,
     "rcs_release_y_duration": 1.0,
     "normal_x_speed": 500,
     "normal_y_speed": 460,
