Refactor mouse module and update core components
- Refactored mouse utilities into modular structure
- Updated configuration management
- Enhanced capture card functionality
- Improved triggerbot implementation
- Updated UI components
- Modified main entry point and configuration files

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "aim_offsetX": 0,
     "aim_offsetY": 0,
     "aim_type": "head",
-    "color": "custom",
+    "color": "yellow",
     "detection_merge_distance": 250,
     "detection_min_contour_points": 5,
     "custom_hsv_min_h": 0,
@@ -20,7 +20,23 @@
     "selected_2_tb": 2,
     "in_game_sens": 0.235,
     "mouse_dpi": 800,
-    "mode": "Silent",
+    "mouse_api": "Serial",
+    "auto_connect_mouse_api": true,
+    "serial_port_mode": "Auto",
+    "serial_port": "",
+    "arduino_port": "",
+    "arduino_baud": 115200,
+    "arduino_16_bit_mouse": true,
+    "net_ip": "127.1.1.1",
+    "net_port": "1984",
+    "net_uuid": "00000000",
+    "net_mac": "00000000",
+    "makv2_port": "",
+    "makv2_baud": 4000000,
+    "dhz_ip": "192.168.2.188",
+    "dhz_port": "5000",
+    "dhz_random": 0,
+    "mode": "Normal",
     "mode_sec": "Normal",
     "fovsize": 61,
     "tbfovsize": 5,
@@ -34,11 +50,11 @@
     "tbburst_count_max": 1,
     "tbburst_interval_min": 0.0,
     "tbburst_interval_max": 0.0,
-    "enablercs": true,
+    "enablercs": false,
     "rcs_pull_speed": 10,
     "rcs_activation_delay": 100,
     "rcs_rapid_click_threshold": 200,
-    "rcs_release_y_enabled": true,
+    "rcs_release_y_enabled": false,
     "rcs_release_y_duration": 1.0,
     "normal_x_speed": 500,
     "normal_y_speed": 460,
@@ -111,17 +127,17 @@
     "show_target_count": true,
     "show_crosshair": true,
     "show_distance_text": true,
-    "udp_ip": "127.0.0.1",
-    "udp_port": "1234",
-    "capture_mode": "UDP",
+    "udp_ip": "192.168.5.24",
+    "udp_port": "4321",
+    "capture_mode": "MSS",
     "last_ndi_source": null,
     "mss_monitor_index": 1,
     "mss_fov_x": 320,
     "mss_fov_y": 325,
     "ndi_fov_enabled": false,
     "ndi_fov": 320,
-    "udp_fov_enabled": true,
-    "udp_fov": 180,
+    "udp_fov_enabled": false,
+    "udp_fov": 16,
     "capture_device_index": 0,
     "capture_width": 1920,
     "capture_height": 1080,
@@ -140,5 +156,9 @@
     "mask_right_button": false,
     "mask_middle_button": false,
     "mask_side4_button": false,
-    "mask_side5_button": false
+    "mask_side5_button": false,
+    "mouse_lock_main_x": true,
+    "mouse_lock_main_y": true,
+    "mouse_lock_sec_x": true,
+    "mouse_lock_sec_y": true
 }
