Update mouse API implementation and UI configuration
- Add MakV2Binary.py for MakV2 device support

- Enhance mouse API initialization and error handling

- Update UI and config settings

--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
     "enableaim": true,
-    "enabletb": false,
+    "enabletb": true,
     "offsetX": -2,
     "offsetY": 3,
     "aim_offsetX": 0,
     "aim_offsetY": 0,
     "aim_type": "head",
-    "color": "yellow",
+    "color": "purple",
     "detection_merge_distance": 250,
     "detection_min_contour_points": 5,
     "custom_hsv_min_h": 0,
@@ -16,12 +16,12 @@
     "custom_hsv_max_s": 255,
     "custom_hsv_max_v": 255,
     "selected_mouse_button": 1,
-    "selected_tb_btn": 1,
+    "selected_tb_btn": 3,
     "selected_2_tb": 2,
-    "in_game_sens": 0.235,
+    "in_game_sens": 0.43,
     "mouse_dpi": 800,
     "mouse_api": "Serial",
-    "auto_connect_mouse_api": false,
+    "auto_connect_mouse_api": true,
     "serial_port_mode": "Auto",
     "serial_port": "10",
     "arduino_port": "",
@@ -40,9 +40,9 @@
     "mode_sec": "Normal",
     "fovsize": 61,
     "tbfovsize": 5,
-    "tbdelay_min": 0.08,
-    "tbdelay_max": 0.15,
-    "tbhold_min": 40,
+    "tbdelay_min": 0.07999999999999996,
+    "tbdelay_max": 0.87,
+    "tbhold_min": 60,
     "tbhold_max": 60,
     "tbcooldown_min": 0.0,
     "tbcooldown_max": 0.0,
@@ -53,12 +53,12 @@
     "enablercs": false,
     "rcs_pull_speed": 10,
     "rcs_activation_delay": 100,
-    "rcs_rapid_click_threshold": 200,
-    "rcs_release_y_enabled": false,
+    "rcs_rapid_click_threshold": 280,
+    "rcs_release_y_enabled": true,
     "rcs_release_y_duration": 1.0,
-    "normal_x_speed": 500,
-    "normal_y_speed": 460,
-    "normalsmooth": 30,
+    "normal_x_speed": 1900,
+    "normal_y_speed": 1060,
+    "normalsmooth": 10,
     "normalsmoothfov": 30,
     "enableaim_sec": false,
     "normal_x_speed_sec": 2,
@@ -70,8 +70,8 @@
     "aim_offsetX_sec": 0,
     "aim_offsetY_sec": 0,
     "aim_type_sec": "head",
-    "ncaf_near_radius": 107,
-    "ncaf_snap_radius": 108,
+    "ncaf_near_radius": 29,
+    "ncaf_snap_radius": 44,
     "ncaf_alpha": 1.5,
     "ncaf_snap_boost": 0.3,
     "ncaf_max_step": 50.0,
@@ -129,8 +129,8 @@
     "show_target_count": true,
     "show_crosshair": true,
     "show_distance_text": true,
-    "udp_ip": "127.0.0.1",
-    "udp_port": "1234",
+    "udp_ip": "192.168.5.24",
+    "udp_port": "4321",
     "capture_mode": "UDP",
     "last_ndi_source": null,
     "mss_monitor_index": 1,
