--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "enableaim": true,
+    "enableaim": false,
     "enabletb": true,
     "offsetX": -2,
     "offsetY": 3,
@@ -7,71 +7,101 @@
     "aim_offsetY": 0,
     "aim_type": "head",
     "color": "purple",
-    "detection_merge_distance": 250,
+    "detection_merge_distance": 12,
     "detection_min_contour_points": 5,
+    "detection_open_kernel": 3,
+    "detection_close_kernel": 5,
+    "detection_mask_blur": 3,
+    "detection_min_bbox_area": 120,
+    "detection_min_contour_area": 40,
+    "detection_min_fill_ratio": 0.16,
+    "detection_edge_reject_area": 220,
+    "detection_edge_min_contour_area": 140,
+    "detection_edge_min_side": 10,
+    "detection_border_margin": 1,
+    "detection_min_width": 6,
+    "detection_min_height": 8,
+    "detection_min_aspect": 0.12,
+    "detection_max_aspect": 2.8,
+    "detection_require_vertical_line": false,
+    "min_detection_bbox_area": 150,
+    "head_estimate_ratio": 0.22,
+    "head_refine_min_pixels": 20,
+    "aim_latest_frame_priority": true,
+    "enable_target_temporal_smoothing": false,
+    "move_queue_merge_batch": 4,
     "custom_hsv_min_h": 0,
     "custom_hsv_min_s": 0,
     "custom_hsv_min_v": 0,
     "custom_hsv_max_h": 179,
     "custom_hsv_max_s": 255,
     "custom_hsv_max_v": 255,
-    "selected_mouse_button": 1,
-    "selected_tb_btn": 3,
+    "selected_mouse_button": 3,
+    "selected_tb_btn": 1,
     "selected_2_tb": 2,
-    "in_game_sens": 0.43,
+    "in_game_sens": 0.235,
     "mouse_dpi": 800,
     "mouse_api": "Serial",
     "auto_connect_mouse_api": true,
     "serial_port_mode": "Auto",
-    "serial_port": "10",
+    "serial_port": "",
     "arduino_port": "",
     "arduino_baud": 115200,
     "arduino_16_bit_mouse": true,
-    "net_ip": "127.168.2.188",
-    "net_port": "1234",
-    "net_uuid": "00000000",
-    "net_mac": "00000000",
+    "net_ip": "192.168.2.188",
+    "net_port": "6234",
+    "net_uuid": "",
+    "net_mac": "",
     "makv2_port": "",
     "makv2_baud": 4000000,
-    "dhz_ip": "127.168.2.188",
-    "dhz_port": "1234",
+    "dhz_ip": "192.168.2.188",
+    "dhz_port": "5000",
     "dhz_random": 0,
+    "aimbot_activation_type": "hold_disable",
+    "aimbot_activation_type_sec": "hold_enable",
     "mode": "Normal",
     "mode_sec": "Normal",
-    "fovsize": 61,
-    "tbfovsize": 5,
-    "tbdelay_min": 0.07999999999999996,
-    "tbdelay_max": 0.87,
-    "tbhold_min": 60,
-    "tbhold_max": 60,
-    "tbcooldown_min": 0.0,
-    "tbcooldown_max": 0.0,
+    "fovsize": 11,
+    "tbfovsize": 25,
+    "tbdelay_min": 0.0,
+    "tbdelay_max": 0.0,
+    "tbhold_min": 5,
+    "tbhold_max": 5,
+    "tbcooldown_min": 0.1999999999999993,
+    "tbcooldown_max": 0.2999999999999998,
     "tbburst_count_min": 1,
     "tbburst_count_max": 1,
-    "tbburst_interval_min": 0.0,
-    "tbburst_interval_max": 0.0,
+    "tbburst_interval_min": 10.0,
+    "tbburst_interval_max": 15.0,
+    "trigger_activation_type": "hold_enable",
+    "trigger_roi_size": 34,
+    "trigger_min_pixels": 1,
+    "trigger_min_ratio": 0.0,
+    "trigger_confirm_frames": 2,
+    "switch_confirm_frames": 3,
+    "ema_alpha": 0.35,
     "enablercs": false,
     "rcs_pull_speed": 10,
     "rcs_activation_delay": 100,
-    "rcs_rapid_click_threshold": 280,
-    "rcs_release_y_enabled": true,
+    "rcs_rapid_click_threshold": 200,
+    "rcs_release_y_enabled": false,
     "rcs_release_y_duration": 1.0,
-    "normal_x_speed": 1900,
-    "normal_y_speed": 1060,
-    "normalsmooth": 10,
+    "normal_x_speed": 40,
+    "normal_y_speed": 40,
+    "normalsmooth": 1,
     "normalsmoothfov": 30,
     "enableaim_sec": false,
     "normal_x_speed_sec": 2,
     "normal_y_speed_sec": 2,
     "normalsmooth_sec": 20,
     "normalsmoothfov_sec": 20,
-    "fovsize_sec": 101,
+    "fovsize_sec": 150,
     "selected_mouse_button_sec": 2,
     "aim_offsetX_sec": 0,
     "aim_offsetY_sec": 0,
     "aim_type_sec": "head",
-    "ncaf_near_radius": 29,
-    "ncaf_snap_radius": 44,
+    "ncaf_near_radius": 100.0,
+    "ncaf_snap_radius": 20.0,
     "ncaf_alpha": 1.5,
     "ncaf_snap_boost": 0.3,
     "ncaf_max_step": 50.0,
@@ -100,20 +130,20 @@
     "wm_min_delay_sec": 0.001,
     "wm_max_delay_sec": 0.003,
     "wm_distance_threshold_sec": 50.0,
-    "bezier_segments": 7,
-    "bezier_ctrl_x": 5.0,
-    "bezier_ctrl_y": 3.0,
-    "bezier_speed": 20.0,
-    "bezier_delay": 0.044012,
+    "bezier_segments": 8,
+    "bezier_ctrl_x": 16.0,
+    "bezier_ctrl_y": 16.0,
+    "bezier_speed": 1.0,
+    "bezier_delay": 0.002,
     "bezier_segments_sec": 8,
     "bezier_ctrl_x_sec": 16.0,
     "bezier_ctrl_y_sec": 16.0,
     "bezier_speed_sec": 1.0,
     "bezier_delay_sec": 0.002,
-    "silent_distance": 3.9609999999999994,
-    "silent_delay": 0.01,
-    "silent_move_delay": 0.15097000000000005,
-    "silent_return_delay": 0.5,
+    "silent_distance": 1.0,
+    "silent_delay": 100.0,
+    "silent_move_delay": 500.0,
+    "silent_return_delay": 500.0,
     "anti_smoke_enabled": false,
     "anti_smoke_enabled_sec": false,
     "show_opencv_windows": true,
@@ -121,8 +151,8 @@
     "show_opencv_detection": true,
     "show_opencv_roi": true,
     "show_opencv_triggerbot_mask": true,
-    "show_ndi_raw_stream_window": true,
-    "show_udp_raw_stream_window": true,
+    "show_ndi_raw_stream_window": false,
+    "show_udp_raw_stream_window": false,
     "show_mode_text": true,
     "show_aimbot_status": true,
     "show_triggerbot_status": true,
@@ -139,7 +169,7 @@
     "ndi_fov_enabled": false,
     "ndi_fov": 320,
     "udp_fov_enabled": false,
-    "udp_fov": 16,
+    "udp_fov": 112,
     "capture_device_index": 0,
     "capture_width": 1920,
     "capture_height": 1080,
@@ -159,8 +189,8 @@
     "mask_middle_button": false,
     "mask_side4_button": false,
     "mask_side5_button": false,
-    "mouse_lock_main_x": true,
-    "mouse_lock_main_y": true,
-    "mouse_lock_sec_x": true,
-    "mouse_lock_sec_y": true
+    "mouse_lock_main_x": false,
+    "mouse_lock_main_y": false,
+    "mouse_lock_sec_x": false,
+    "mouse_lock_sec_y": false
 }
