Update RGB trigger configuration and remove test files

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "aim_offsetX": 0,
     "aim_offsetY": -3,
     "aim_type": "head",
-    "color": "red",
+    "color": "yellow",
     "detection_merge_distance": 250,
     "detection_min_contour_points": 5,
     "detection_open_kernel": 3,
@@ -39,7 +39,7 @@
     "selected_mouse_button": 3,
     "selected_tb_btn": 4,
     "selected_2_tb": 2,
-    "in_game_sens": 0.43,
+    "in_game_sens": 0.25,
     "mouse_dpi": 800,
     "mouse_api": "Serial",
     "auto_connect_mouse_api": true,
@@ -64,7 +64,7 @@
     "aimbot_activation_type_sec": "hold_enable",
     "mode": "Normal",
     "mode_sec": "Normal",
-    "fovsize": 51,
+    "fovsize": 65,
     "tbfovsize": 15,
     "trigger_type": "rgb",
     "tbdelay_min": 0.0,
@@ -75,16 +75,16 @@
     "tbcooldown_max": 0.2999999999999998,
     "rgb_tbdelay_min": 0.01,
     "rgb_tbdelay_max": 0.01,
-    "rgb_tbhold_min": 15,
-    "rgb_tbhold_max": 16,
+    "rgb_tbhold_min": 5,
+    "rgb_tbhold_max": 5,
     "rgb_tbcooldown_min": 0.04999999999999982,
     "rgb_tbcooldown_max": 0.04999999999999982,
-    "rgb_color_profile": "red",
+    "rgb_color_profile": "yellow",
     "tbburst_count_min": 1,
     "tbburst_count_max": 1,
     "tbburst_interval_min": 10.0,
     "tbburst_interval_max": 15.0,
-    "trigger_activation_type": "hold_disable",
+    "trigger_activation_type": "hold_enable",
     "trigger_roi_size": 34,
     "trigger_min_pixels": 1,
     "trigger_min_ratio": 0.0,
@@ -99,15 +99,15 @@
     "rcs_release_y_duration": 1.0,
     "normal_x_speed": 20,
     "normal_y_speed": 5,
-    "normalsmooth": 25,
-    "normalsmoothfov": 6,
-    "enableaim_sec": false,
-    "normal_x_speed_sec": 2,
-    "normal_y_speed_sec": 2,
-    "normalsmooth_sec": 20,
+    "normalsmooth": 5,
+    "normalsmoothfov": 1,
+    "enableaim_sec": true,
+    "normal_x_speed_sec": 17,
+    "normal_y_speed_sec": 5,
+    "normalsmooth_sec": 5,
     "normalsmoothfov_sec": 20,
     "fovsize_sec": 150,
-    "selected_mouse_button_sec": 2,
+    "selected_mouse_button_sec": 4,
     "aim_offsetX_sec": 0,
     "aim_offsetY_sec": 0,
     "aim_type_sec": "head",
@@ -171,9 +171,9 @@
     "show_crosshair": false,
     "show_distance_text": false,
     "ui_collapsible_states": {
-        "general:hardware_api": true,
-        "general:capture_controls": true,
-        "general:settings": true,
+        "general:hardware_api": false,
+        "general:capture_controls": false,
+        "general:settings": false,
         "general:custom_hsv": true,
         "general:detection_parameters": false,
         "general:mouse_lock": false,
@@ -195,9 +195,9 @@
         "trigger:activation": true,
         "trigger:rgb_parameters": true
     },
-    "udp_ip": "192.168.5.24",
+    "udp_ip": "127.0.0.1",
     "udp_port": "4321",
-    "capture_mode": "MSS",
+    "capture_mode": "UDP",
     "last_ndi_source": null,
     "mss_monitor_index": 1,
     "mss_fov_x": 320,
@@ -205,7 +205,7 @@
     "ndi_fov_enabled": false,
     "ndi_fov": 320,
     "udp_fov_enabled": false,
-    "udp_fov": 112,
+    "udp_fov": 96,
     "capture_device_index": 0,
     "capture_width": 1920,
     "capture_height": 1080,
