--- a/config.json
+++ b/config.json
@@ -30,18 +30,18 @@
     "aim_latest_frame_priority": true,
     "enable_target_temporal_smoothing": false,
     "move_queue_merge_batch": 4,
-    "custom_hsv_min_h": 6,
-    "custom_hsv_min_s": 39,
-    "custom_hsv_min_v": 119,
-    "custom_hsv_max_h": 27,
-    "custom_hsv_max_s": 109,
-    "custom_hsv_max_v": 204,
-    "selected_mouse_button": 3,
+    "custom_hsv_min_h": 147,
+    "custom_hsv_min_s": 149,
+    "custom_hsv_min_v": 75,
+    "custom_hsv_max_h": 179,
+    "custom_hsv_max_s": 173,
+    "custom_hsv_max_v": 165,
+    "selected_mouse_button": 1,
     "selected_tb_btn": 4,
     "selected_2_tb": 2,
     "in_game_sens": 0.25,
     "mouse_dpi": 800,
-    "mouse_api": "Net",
+    "mouse_api": "Serial",
     "auto_connect_mouse_api": true,
     "serial_auto_switch_4m": false,
     "serial_port_mode": "Auto",
@@ -66,6 +66,10 @@
     "mode": "Normal",
     "mode_sec": "Normal",
     "fovsize": 65,
+    "ads_fov_enabled": true,
+    "ads_fovsize": 65.0,
+    "ads_key": "Side Mouse 4 Button",
+    "ads_key_type": "hold",
     "tbfovsize": 15,
     "trigger_type": "rgb",
     "tbdelay_min": 0.0,
@@ -86,7 +90,7 @@
     "tbburst_interval_min": 10.0,
     "tbburst_interval_max": 15.0,
     "trigger_activation_type": "hold_enable",
-    "trigger_strafe_mode": "auto",
+    "trigger_strafe_mode": "off",
     "trigger_strafe_auto_lead_ms": 18,
     "trigger_strafe_manual_neutral_ms": 0,
     "trigger_roi_size": 34,
@@ -111,6 +115,10 @@
     "normalsmooth_sec": 5,
     "normalsmoothfov_sec": 20,
     "fovsize_sec": 150,
+    "ads_fov_enabled_sec": false,
+    "ads_fovsize_sec": 150.0,
+    "ads_key_sec": "Right Mouse Button",
+    "ads_key_type_sec": "hold",
     "selected_mouse_button_sec": 4,
     "aim_offsetX_sec": 0,
     "aim_offsetY_sec": 0,
@@ -177,18 +185,18 @@
     "ui_collapsible_states": {
         "general:hardware_api": true,
         "general:capture_controls": false,
-        "general:settings": true,
+        "general:settings": false,
         "general:custom_hsv": true,
         "general:detection_parameters": false,
         "general:mouse_lock": false,
         "general:button_mask": false,
-        "aimbot:operation_mode": true,
+        "aimbot:operation_mode": false,
         "aimbot:mode_parameters": true,
-        "aimbot:offset": false,
+        "aimbot:offset": true,
         "aimbot:aim_type": false,
-        "aimbot:activation": false,
-        "sec_aimbot:operation_mode": true,
-        "sec_aimbot:mode_parameters": true,
+        "aimbot:activation": true,
+        "sec_aimbot:operation_mode": false,
+        "sec_aimbot:mode_parameters": false,
         "sec_aimbot:offset": false,
         "sec_aimbot:aim_type": false,
         "sec_aimbot:activation": false,
@@ -198,7 +206,12 @@
         "trigger:burst_settings": false,
         "trigger:activation": true,
         "trigger:rgb_parameters": true,
-        "trigger:strafe_helper": true
+        "trigger:strafe_helper": true,
+        "main_aimbot:operation_mode": true,
+        "main_aimbot:mode_parameters": true,
+        "main_aimbot:offset": false,
+        "main_aimbot:aim_type": false,
+        "main_aimbot:activation": true
     },
     "udp_ip": "127.0.0.1",
     "udp_port": "4321",
