--- a/config.json
+++ b/config.json
@@ -30,18 +30,18 @@
     "aim_latest_frame_priority": true,
     "enable_target_temporal_smoothing": false,
     "move_queue_merge_batch": 4,
-    "custom_hsv_min_h": 147,
-    "custom_hsv_min_s": 149,
-    "custom_hsv_min_v": 75,
-    "custom_hsv_max_h": 179,
-    "custom_hsv_max_s": 173,
-    "custom_hsv_max_v": 165,
+    "custom_hsv_min_h": 0,
+    "custom_hsv_min_s": 59,
+    "custom_hsv_min_v": 158,
+    "custom_hsv_max_h": 16,
+    "custom_hsv_max_s": 109,
+    "custom_hsv_max_v": 187,
     "selected_mouse_button": 1,
     "selected_tb_btn": 4,
     "selected_2_tb": 2,
     "in_game_sens": 0.25,
     "mouse_dpi": 800,
-    "mouse_api": "Serial",
+    "mouse_api": "KmboxA",
     "auto_connect_mouse_api": true,
     "serial_auto_switch_4m": false,
     "serial_port_mode": "Auto",
@@ -188,9 +188,9 @@
     "show_distance_text": false,
     "ui_collapsible_states": {
         "general:hardware_api": true,
-        "general:capture_controls": false,
-        "general:settings": false,
-        "general:custom_hsv": true,
+        "general:capture_controls": true,
+        "general:settings": true,
+        "general:custom_hsv": false,
         "general:detection_parameters": false,
         "general:mouse_lock": false,
         "general:button_mask": false,
