Add Config tab enhancements and UI improvements
This commit introduces significant improvements to the Config tab and overall UI functionality.

Config Tab Features:
- Add DEL (Delete) action for configuration profiles
  * Implement confirmation dialog before deletion
  * Add minimum-one-profile safeguard to prevent deleting all profiles
  * Ensure at least one profile always remains available

- Add clipboard-driven config import prompts
  * Implement dark-themed dialogs for better visual consistency
  * Streamline config import workflow with clipboard support
  * Improve user experience for sharing and importing configurations

UI Improvements:
- Rename Trigger Type display from 'Current' to 'Classic Trigger'
  * Improve clarity and consistency in UI terminology
  * Better distinguish between different trigger types

- Update configuration settings and defaults
- Update version to 2.3.0 with comprehensive changelog
- Update related documentation

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "aim_offsetX": 0,
     "aim_offsetY": -3,
     "aim_type": "head",
-    "color": "custom",
+    "color": "yellow",
     "detection_merge_distance": 250,
     "detection_min_contour_points": 5,
     "detection_open_kernel": 3,
@@ -36,12 +36,12 @@
     "custom_hsv_max_h": 16,
     "custom_hsv_max_s": 109,
     "custom_hsv_max_v": 187,
-    "selected_mouse_button": 1,
+    "selected_mouse_button": 3,
     "selected_tb_btn": 4,
     "selected_2_tb": 2,
     "in_game_sens": 0.25,
     "mouse_dpi": 800,
-    "mouse_api": "KmboxA",
+    "mouse_api": "Serial",
     "auto_connect_mouse_api": true,
     "serial_auto_switch_4m": false,
     "serial_port_mode": "Auto",
@@ -65,9 +65,9 @@
     "aimbot_activation_type_sec": "hold_enable",
     "mode": "Normal",
     "mode_sec": "Normal",
-    "fovsize": 65,
-    "ads_fov_enabled": true,
-    "ads_fovsize": 65.0,
+    "fovsize": 45,
+    "ads_fov_enabled": false,
+    "ads_fovsize": 31.0,
     "ads_key": "Right Mouse Button",
     "ads_key_type": "hold",
     "tbfovsize": 15,
@@ -109,11 +109,11 @@
     "rcs_rapid_click_threshold": 200,
     "rcs_release_y_enabled": false,
     "rcs_release_y_duration": 1.0,
-    "normal_x_speed": 20,
-    "normal_y_speed": 5,
-    "normalsmooth": 5,
+    "normal_x_speed": 320,
+    "normal_y_speed": 10,
+    "normalsmooth": 10,
     "normalsmoothfov": 1,
-    "enableaim_sec": true,
+    "enableaim_sec": false,
     "normal_x_speed_sec": 17,
     "normal_y_speed_sec": 5,
     "normalsmooth_sec": 5,
@@ -187,12 +187,12 @@
     "show_crosshair": false,
     "show_distance_text": false,
     "ui_collapsible_states": {
-        "general:hardware_api": true,
-        "general:capture_controls": true,
-        "general:settings": true,
+        "general:hardware_api": false,
+        "general:capture_controls": false,
+        "general:settings": false,
         "general:custom_hsv": false,
         "general:detection_parameters": false,
-        "general:mouse_lock": false,
+        "general:mouse_lock": true,
         "general:button_mask": false,
         "aimbot:operation_mode": false,
         "aimbot:mode_parameters": true,
@@ -203,19 +203,19 @@
         "sec_aimbot:mode_parameters": false,
         "sec_aimbot:offset": false,
         "sec_aimbot:aim_type": false,
-        "sec_aimbot:activation": true,
+        "sec_aimbot:activation": false,
         "trigger:core": true,
         "trigger:parameters": true,
-        "trigger:trigger_conditions": false,
-        "trigger:burst_settings": false,
-        "trigger:activation": true,
-        "trigger:rgb_parameters": true,
+        "trigger:trigger_conditions": true,
+        "trigger:burst_settings": true,
+        "trigger:activation": false,
+        "trigger:rgb_parameters": false,
         "trigger:strafe_helper": true,
-        "main_aimbot:operation_mode": true,
+        "main_aimbot:operation_mode": false,
         "main_aimbot:mode_parameters": true,
         "main_aimbot:offset": false,
         "main_aimbot:aim_type": false,
-        "main_aimbot:activation": true
+        "main_aimbot:activation": false
     },
     "udp_ip": "127.0.0.1",
     "udp_port": "4321",
