Fix Chinese encoding issues in aimbot documentation

--- a/config.json
+++ b/config.json
@@ -89,9 +89,9 @@
     "rgb_tbcooldown_min": 0.04999999999999982,
     "rgb_tbcooldown_max": 0.04999999999999982,
     "rgb_color_profile": "custom",
-    "rgb_custom_r": 161,
-    "rgb_custom_g": 69,
-    "rgb_custom_b": 163,
+    "rgb_custom_r": 242,
+    "rgb_custom_g": 222,
+    "rgb_custom_b": 84,
     "tbburst_count_min": 1,
     "tbburst_count_max": 1,
     "tbburst_interval_min": 10.0,
@@ -212,14 +212,14 @@
         "trigger:trigger_conditions": true,
         "trigger:burst_settings": true,
         "trigger:activation": false,
-        "trigger:rgb_parameters": false,
+        "trigger:rgb_parameters": true,
         "trigger:strafe_helper": true,
         "main_aimbot:operation_mode": true,
         "main_aimbot:mode_parameters": true,
         "main_aimbot:offset": false,
         "main_aimbot:aim_type": true,
         "main_aimbot:activation": true,
-        "trigger:custom_rgb": false
+        "trigger:custom_rgb": true
     },
     "udp_ip": "127.0.0.1",
     "udp_port": "4321",
